src/objects/AccountingInvestment__c.object
<CustomObject>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No matching Portfolio Investment Type companies found.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Portfolio Investment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounting Investments</relationshipLabel>
        <relationshipName>AccountingInvestments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>glEntity__c</fullName>
        <label>GL Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>investmentID__c</fullName>
        <label>Investment ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalCostBasisAccounting__c</fullName>
        <label>Total Cost Basis (Accounting)</label>
        <summarizedField>AccountingTransaction__c.costProceeds__c</summarizedField>
        <summaryFilterItems>
            <field>AccountingTransaction__c.reconciliationType__c</field>
            <operation>equals</operation>
            <value>Cost</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountingTransaction__c.investment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalCostBasisInventoryAssets__c</fullName>
        <label>Total Cost Basis (Inventory Assets)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totalCostBasisVariance__c</fullName>
        <formula>totalCostBasisInventoryAssets__c -  totalCostBasisAccounting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Basis Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totalCostProceedsAccounting__c</fullName>
        <label>Total Cost/Proceeds (Accounting)</label>
        <summarizedField>AccountingTransaction__c.costProceeds__c</summarizedField>
        <summaryForeignKey>AccountingTransaction__c.investment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalCostProceedsInventoryAssets__c</fullName>
        <formula>totalCostBasisInventoryAssets__c +  totalSalesProceedsInventoryAssets__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost/Proceeds (Inventory Assets)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totalSalesProceedsAccounting__c</fullName>
        <label>Total Sales Proceeds (Accounting)</label>
        <summarizedField>AccountingTransaction__c.costProceeds__c</summarizedField>
        <summaryFilterItems>
            <field>AccountingTransaction__c.reconciliationType__c</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountingTransaction__c.investment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>totalSalesProceedsInventoryAssets__c</fullName>
        <label>Total Sales Proceeds (Inventory Assets)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>totalSalesProceedsVariance__c</fullName>
        <formula>totalSalesProceedsInventoryAssets__c  -  totalSalesProceedsAccounting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales Proceeds Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Investment</label>
    <listViews>
        <fullName>Accounting_Investments_Reconciliation</fullName>
        <columns>account__c</columns>
        <columns>NAME</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalCostProceedsAccounting__c</columns>
        <columns>totalCostProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>totalCostBasisVariance__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>totalCostBasisInventoryAssets__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounting Investments Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>glEntity__c</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalSalesProceedsAccounting__c</columns>
        <columns>totalSalesProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Mercury</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>glEntity__c</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalSalesProceedsAccounting__c</columns>
        <columns>totalSalesProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>glEntity__c</field>
            <operation>equals</operation>
            <value>MMI</value>
        </filters>
        <label>All - Mercury</label>
    </listViews>
    <listViews>
        <fullName>All_Missing_Account</fullName>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>glEntity__c</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalSalesProceedsAccounting__c</columns>
        <columns>totalSalesProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>account__c</field>
            <operation>equals</operation>
        </filters>
        <label>All - Missing Account</label>
    </listViews>
    <listViews>
        <fullName>All_Pontiac</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>glEntity__c</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalSalesProceedsAccounting__c</columns>
        <columns>totalSalesProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>glEntity__c</field>
            <operation>equals</operation>
            <value>POLA</value>
        </filters>
        <filters>
            <field>glEntity__c</field>
            <operation>equals</operation>
            <value>POM</value>
        </filters>
        <label>All - Pontiac</label>
    </listViews>
    <listViews>
        <fullName>Fund_1_Opportunity_to_be_Added</fullName>
        <columns>glEntity__c</columns>
        <columns>account__c</columns>
        <columns>NAME</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalCostProceedsAccounting__c</columns>
        <columns>totalCostProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>totalCostBasisInventoryAssets__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>glEntity__c</field>
            <operation>contains</operation>
            <value>POM,MMI,POLA</value>
        </filters>
        <label>Fund 1 Opportunity to be Added</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Needs_to_be_Added</fullName>
        <columns>glEntity__c</columns>
        <columns>account__c</columns>
        <columns>NAME</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalCostProceedsAccounting__c</columns>
        <columns>totalCostProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>totalCostBasisInventoryAssets__c</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Needs to be Added</label>
    </listViews>
    <listViews>
        <fullName>Pont_Merc_Opportunity_Needs_to_be_Added</fullName>
        <columns>glEntity__c</columns>
        <columns>account__c</columns>
        <columns>NAME</columns>
        <columns>investmentID__c</columns>
        <columns>totalCostBasisAccounting__c</columns>
        <columns>totalCostBasisInventoryAssets__c</columns>
        <columns>totalCostBasisVariance__c</columns>
        <columns>totalCostProceedsAccounting__c</columns>
        <columns>totalCostProceedsInventoryAssets__c</columns>
        <columns>totalSalesProceedsVariance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>totalCostBasisInventoryAssets__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>glEntity__c</field>
            <operation>contains</operation>
            <value>POM,MMI,POLA</value>
        </filters>
        <label>POLA/POM/MMI Opportunity to be Added</label>
    </listViews>
    <nameField>
        <displayFormat>ACCINV-{0000000000}</displayFormat>
        <label>Accounting Investment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RequireAccountOnUpdate</fullName>
        <active>false</active>
        <description>If update to the record, require the account field be populated</description>
        <errorConditionFormula>ISBLANK( account__c) &amp;&amp; NOT(ISNEW() )</errorConditionFormula>
        <errorDisplayField>account__c</errorDisplayField>
        <errorMessage>Account must be selected before additional updates can be made.</errorMessage>
    </validationRules>
</CustomObject>